--- a/style.css
+++ b/style.css
@@ -28,3 +28,23 @@ button {
 button:hover {
     background-color: #45a049;
 }
+
+.profile-img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 50%;
+    display: block;
+    margin: 20px auto;
+    border: 4px solid #4CAF50;
+
+}
+
+.container{
+    max-width: 600px;
+    margin: auto;
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0);
+}
