--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@ body{
     background-color: #f7f7f7;
     margin: 20px
 }
-h1{
+h1 , h2{
     color: #333;
     text-align: center;
+    font-family: Arial, sans-serif;
 }
 p{
     font-size: 18px;
@@ -14,7 +15,7 @@ p{
 ul{
     list-style-type: square;
 }
-
+/*Button style8*/
 button {
     padding: 10px 20px;
     background-color: #4CAF50;
@@ -23,28 +24,28 @@ button {
     color: white;
     font-size: 16px;
     cursor: pointer;
+    display: block;
+    margin:20px auto;
 }
 
 button:hover {
     background-color: #45a049;
 }
-
+/*make the profile image small and round*/
 .profile-img {
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
+    width: 150px;
     border-radius: 50%;
     display: block;
-    margin: 20px auto;
+    margin: 0 auto;
     border: 4px solid #4CAF50;
 
 }
-
+/*Center and style the content */
 .container{
     max-width: 600px;
-    margin: auto;
-    background: white;
+    margin:0 auto;
+    background: #f7f7f7;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0);
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
