adding the flexbox

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ button:hover {
 /* NAVBAR STYLING */
 .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content:space-between;
     align-items: center;
     background: #333;
     padding: 15px 20px;
@@ -84,3 +84,19 @@ button:hover {
  .nav-links a:hover {
     text-decoration: underline;
  }   
+
+ .flex-container {
+    display: flex;
+    gap: 20px;
+    padding: 20px;
+    justify-content: center;
+ }
+
+ .box {
+    background-color: #f4f4f4;
+    padding: 20px;
+    border-radius: 10px;
+    flex: 1;
+    text-align: center;
+ }
+ 
