--- a/style.css
+++ b/style.css
@@ -117,3 +117,29 @@ button:hover {
  }
 
 }
+ .contact{
+    text-align: center;
+    padding: 40px 20px;
+    background-color: #f7f7f7;
+    margin-top: 40px;
+ }
+
+ .contact h2{
+    font-size: 2rem;
+    margin-bottom: 10px;
+ }
+
+ .conatct-btn{
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: 0.3s ease;
+ }
+
+ .contact-btn:hover{
+    background-color: #45a049;
+ }
