--- a/style.css
+++ b/style.css
@@ -143,3 +143,21 @@ button:hover {
  .contact-btn:hover{
     background-color: #45a049;
  }
+
+ footer{
+    text-align: center;
+    background-color: #f4f4f4;
+    padding: 20px;
+    margin-top: 40px;
+    font-size: 0.9rem;
+    color: #55;
+ }
+
+ footer a{
+    color: #007acc;
+    text-decoration: none;
+ }
+
+ footer a:hover{
+    text-decoration: underline;
+ }
