--- a/style.css
+++ b/style.css
@@ -161,3 +161,21 @@ button:hover {
  footer a:hover{
     text-decoration: underline;
  }
+
+ .skills{
+    max-width: 800px;
+    margin: 40px auto;
+    padding: 20px;
+ }
+
+ .skills ul{
+    list-style: none;
+    padding: 0;
+ }
+
+ .skills li{
+    background: #f4f4f4;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 6px;
+ }
